# tauri-plugin-system

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  build.yml  clippy.yml  test.yml
android/: build.gradle.kts
android/src/main/java/com/taiizor/tauri/plugin/system/: SystemPlugin.kt
examples/tauri-app/: package.json
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: SystemPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_all_info.toml  get_battery_info.toml  get_cpu_info.toml  get_cpu_usage.toml  get_disk_info.toml  get_display_info.toml  get_gpu_info.toml  get_network_info.toml  get_os_info.toml  get_thermal_info.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
